# octopus-deploy-mcp-server

./: .env.sh.example  .gitignore  Dockerfile  LICENSE  README.md  dev.py  pyproject.toml
scripts/: build.sh
src/octopus_deploy_mcp/: __init__.py  main.py  server.py  settings.py
src/octopus_deploy_mcp/tools/: __init__.py  base_tools.py  coordinator.py  deployment_tools.py  project_tools.py  release_tools.py
tests/: README.md  __init__.py  conftest.py  test_basic_functionality.py  test_deployment_tools_integration.py  test_mcp_server_integration.py  test_project_tools_integration.py  test_release_tools_integration.py  test_runner.py  test_server_initialization.py  test_tools_functionality.py
